# tradingIA

./: .dockerignore  .env  .env.example  .gitignore  DOCKER_GUIDE.md  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json  test_output.txt  test_output_2.txt  test_payload.json  test_response.json  tmp_test_analyst.py
app/: main.py  verify_mock.py
app/core/: config.py  utils.py
app/infraestructure/: database.py  exchange_client.py
app/models/: db_models.py  nansen.py
app/services/: ai_analyst.py  circuit_breaker.py  exit_manager.py  llm_provider.py  nansen_client.py  nansen_mock.py  nansen_validator.py  notifier.py  portfolio_service.py  risk_manager.py  signal_engine.py
app/ui/: dashboard.py
docs/: CHECKLIST_IMPLEMENTACION.md  DASHBOARD_VISUALIZACIONES_MOCK.md  GUIA_IMPLEMENTACION_NANSEN_MOCK.md  README_NANSEN_MOCK.md
scripts/: claude.md  init_db.sql
skills/api-design-principles/: SKILL.md
skills/api-design-principles/assets/: api-design-checklist.md
skills/api-security-best-practices/: SKILL.md
skills/architecture/: examples.md  pattern-selection.md  patterns-reference.md
skills/architecture-patterns/: SKILL.md
skills/architecture-patterns/resources/: implementation-playbook.md
skills/async-python-patterns/: SKILL.md
skills/c4-context/: SKILL.md
skills/clean-code/: SKILL.md
skills/error-handling-patterns/: SKILL.md
skills/microservices-patterns/: SKILL.md
skills/observability-engineer/: SKILL.md
skills/python-performance-optimization/: SKILL.md
skills/risk-metrics-calculation/: SKILL.md
skills/typescript-expert/: SKILL.md
tests/: dex_trades_test.json  holdings_test.json  test_core_services.py  test_nansen.py  test_nansen_mock_dashboard.py  test_pipeline.py  test_signal_engine.py
(+31 files in other folders)
