[project]
name = "tradingia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "ccxt>=4.5.38",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pandas>=2.2.0,<3.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "python-telegram-bot>=22.6",
    "sqlalchemy[asyncio]>=2.0.38",
    "aiosqlite>=0.21.0",
    "tenacity>=9.0.0",
    "psutil>=6.0.0",
    "streamlit>=1.42.0",
    "plotly>=6.0.0",
    "ollama>=0.2.0", 
    "nest-asyncio>=1.5.8",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pandas-stubs<3.0.0",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "apscheduler.*",
    "ccxt.*"
]
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["app*"]  